Bug 1805796 - Remove MOZ_DIAGNOSTIC_ASSERT(gNeckoChild), r=necko-reviewers,valentin

The Pernosco session shows that the content child is about to destroy at that point, so there is not much we can do.
Removing the diagnostic assert seems to be the only way.

Differential Revision: https://phabricator.services.mozilla.com/D202875